// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cssToTailwind 1`] = `
Array [
  Object {
    "missing": Object {
      "base": Array [
        Array [
          "border-color",
          "rgba(250, 208, 208, 1)",
        ],
      ],
    },
    "selector": ".alert",
    "tailwind": "rounded border-solid border mb-6 py-6 px-20 relative text-white w-full",
  },
  Object {
    "missing": Object {
      "base": Array [
        Array [
          "min-height",
          "4rem",
        ],
      ],
    },
    "selector": ".guest-layout__logo",
    "tailwind": "flex justify-center mb-6",
  },
  Object {
    "missing": Object {
      "base": Array [
        Array [
          "border-color",
          "rgba(229, 229, 229, 1)",
        ],
      ],
    },
    "selector": ".guest-layout__container",
    "tailwind": "bg-white rounded border-solid border",
  },
  Object {
    "missing": Object {
      "base": Array [
        Array [
          "max-width",
          "fit-content",
        ],
      ],
    },
    "selector": ".guest-layout",
    "tailwind": "my-32 mx-auto",
  },
  Object {
    "missing": Object {
      "base": Array [
        Array [
          "line-height",
          "48px",
        ],
        Array [
          "border-color",
          "rgba(229, 229, 229, 1)",
        ],
      ],
    },
    "selector": ".guest-layout__header",
    "tailwind": "border-solid border-b font-normal text-3xl p-10 tracking-wide",
  },
  Object {
    "missing": Object {
      "base": Array [
        Array [
          "border-color",
          "rgba(229, 229, 229, 1)",
        ],
      ],
    },
    "selector": ".guest-layout__footer",
    "tailwind": "border-solid border-t flex flex-row-reverse items-center justify-between py-10 px-12 w-full",
  },
  Object {
    "missing": Object {},
    "selector": ".guest-layout__footer--compact",
    "tailwind": "mt-6 p-0",
  },
  Object {
    "missing": Object {
      "base": Array [
        Array [
          "width",
          "608px",
        ],
      ],
    },
    "selector": ".guest-layout__content",
    "tailwind": "flex flex-no-wrap",
  },
  Object {
    "missing": Object {
      "base": Array [
        Array [
          "width",
          "1216px",
        ],
      ],
    },
    "selector": ".guest-layout__content--with-side-content",
    "tailwind": "",
  },
  Object {
    "missing": Object {},
    "selector": ".guest-layout__content--with-side-contentdfdf",
    "tailwind": "w-1/2",
  },
  Object {
    "missing": Object {
      "base": Array [
        Array [
          "border-color",
          "rgba(229, 229, 229, 1)",
        ],
      ],
    },
    "selector": ".guest-layout__content--with-separatordfdfdf",
    "tailwind": "border-solid border-r",
  },
  Object {
    "missing": Object {},
    "selector": ".guest-layout__content-inner",
    "tailwind": "flex flex-col justify-center m-0 p-12 w-full",
  },
  Object {
    "missing": Object {},
    "selector": ".guest-layout__content--with-separatordfdf",
    "tailwind": "",
  },
  Object {
    "missing": Object {
      "base": Array [
        Array [
          "background-color",
          "rgba(227, 230, 230, 1)",
        ],
      ],
    },
    "selector": ".guest-layout__side-content",
    "tailwind": "flex flex-col justify-center p-12 w-1/2",
  },
  Object {
    "missing": Object {},
    "selector": ".guest-layout__dfdfdfdf",
    "tailwind": "mt-0",
  },
]
`;

exports[`cssToTailwind with custom tailwind config 1`] = `
Array [
  Object {
    "missing": Object {},
    "selector": ".alert",
    "tailwind": "border-tlp-red rounded border-solid border mb-6 py-6 px-20 relative text-neutral-0 w-full",
  },
  Object {
    "missing": Object {
      "base": Array [
        Array [
          "min-height",
          "4rem",
        ],
      ],
    },
    "selector": ".guest-layout__logo",
    "tailwind": "flex justify-center mb-6",
  },
  Object {
    "missing": Object {},
    "selector": ".guest-layout__container",
    "tailwind": "bg-neutral-0 border-neutral-100 rounded border-solid border",
  },
  Object {
    "missing": Object {
      "base": Array [
        Array [
          "max-width",
          "fit-content",
        ],
      ],
    },
    "selector": ".guest-layout",
    "tailwind": "my-32 mx-auto",
  },
  Object {
    "missing": Object {
      "base": Array [
        Array [
          "line-height",
          "48px",
        ],
      ],
    },
    "selector": ".guest-layout__header",
    "tailwind": "border-neutral-100 border-solid border-b font-normal text-3xl p-10 tracking-wide",
  },
  Object {
    "missing": Object {},
    "selector": ".guest-layout__footer",
    "tailwind": "border-neutral-100 border-solid border-t flex flex-row-reverse items-center justify-between py-10 px-12 w-full",
  },
  Object {
    "missing": Object {},
    "selector": ".guest-layout__footer--compact",
    "tailwind": "mt-6 p-0",
  },
  Object {
    "missing": Object {
      "base": Array [
        Array [
          "width",
          "608px",
        ],
      ],
    },
    "selector": ".guest-layout__content",
    "tailwind": "flex flex-no-wrap",
  },
  Object {
    "missing": Object {
      "base": Array [
        Array [
          "width",
          "1216px",
        ],
      ],
    },
    "selector": ".guest-layout__content--with-side-content",
    "tailwind": "",
  },
  Object {
    "missing": Object {},
    "selector": ".guest-layout__content--with-side-contentdfdf",
    "tailwind": "w-1/2",
  },
  Object {
    "missing": Object {},
    "selector": ".guest-layout__content--with-separatordfdfdf",
    "tailwind": "border-neutral-100 border-solid border-r",
  },
  Object {
    "missing": Object {},
    "selector": ".guest-layout__content-inner",
    "tailwind": "flex flex-col justify-center m-0 p-12 w-full",
  },
  Object {
    "missing": Object {},
    "selector": ".guest-layout__content--with-separatordfdf",
    "tailwind": "",
  },
  Object {
    "missing": Object {},
    "selector": ".guest-layout__side-content",
    "tailwind": "bg-neutral-100 flex flex-col justify-center p-12 w-1/2",
  },
  Object {
    "missing": Object {},
    "selector": ".guest-layout__dfdfdfdf",
    "tailwind": "mt-0",
  },
]
`;
